--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -18,6 +18,10 @@ $link-font: "Roboto Mono", monospace;
 // Typography
 $line-height: 1.5;
 
+// Margins
+$article-mobile: 9rem 5rem 8rem 2rem;
+$article-desktop: 7.5rem 7rem 8rem 5rem;
+
 // Media Query Breakpoints
 $desktop: em(1151);
 $tabletLandscape: em(1024);
