--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -17,5 +17,13 @@ body {
 }
 
 main {
-    overflow: hidden;
+    max-height: 98vh;
+    margin-top: 1rem;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+
+    @media (min-width: 72em) {
+        max-height: 95vh;
+    }
 }
