--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,16 @@ body {
 }
 
 main {
-  overflow: hidden;
+  max-height: 98vh;
+  margin-top: 1rem;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+}
+@media (min-width: 72em) {
+  main {
+    max-height: 95vh;
+  }
 }
 
 body,
@@ -54,15 +63,16 @@ button:hover {
 .section .text-content {
   position: relative;
   z-index: 2;
-  margin: 9rem 5rem 8rem 2rem;
+  width: 90%;
 }
 
 .section img {
   position: absolute;
-  width: 80%;
+  width: 90%;
   z-index: 1;
-  right: -17rem;
-  top: -5rem;
+  right: -10rem;
+  top: -4rem;
+  transform: rotate(-10deg);
 }
 
 .site-nav {
@@ -255,15 +265,38 @@ button:hover {
 }
 
 .section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: relative;
   overflow: hidden;
-  border-radius: 3rem;
-  height: 95vh;
   margin: 1rem;
+  padding: 5rem 0;
+  scroll-snap-align: start;
+  border-radius: 3rem;
+}
+@media (min-width: 30em) {
+  .section {
+    height: 97vh;
+    padding: 0;
+  }
+  .section img {
+    width: 80%;
+    z-index: 1;
+    right: -17rem;
+    top: -5rem;
+    transform: rotate(-5deg);
+  }
 }
 @media (min-width: 72em) {
+  .section {
+    height: 95vh;
+  }
   .section .text-content {
-    margin: 7.5rem 7rem 8rem 5rem;
+    width: 80%;
+  }
+  .section p {
+    margin-right: 4rem;
   }
   .section img {
     width: 50%;
