--- a/sass/_header-nav.scss
+++ b/sass/_header-nav.scss
@@ -12,9 +12,11 @@
 }
 
 .site-nav img {
-    height: 4rem;
+    // height: 4rem;
+    height: 3.2rem;
     filter: brightness(0) invert(1);
-    margin: 1rem 0 0 0.5rem;
+    // margin: 1rem 0 0 0.5rem;
+    margin: 0.5rem 0 0 0.5rem;
     padding: 1rem;
     vertical-align: bottom;
 }
@@ -39,17 +41,21 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    width: 27rem;
+    // width: 27rem;
+    width: 19rem;
     height: 97vh;
     margin: 0 1rem 2rem;
     left: -100%;
     background-color: $why-bg-color;
     z-index: 50;
-    border-radius: 3rem;
+    // border-radius: 3rem;
+    border-radius: 1.5rem;
+
     transition: left 0.5s ease;
 
     img {
-        width: 1.8rem;
+        // width: 1.8rem;
+        width: 1.1rem;
         filter: brightness(0) invert(1);
         vertical-align: top;
         margin-right: 0.5rem;
@@ -57,12 +63,14 @@
 
     a {
         color: $white-font-color;
-        font-size: 1.4rem;
+        // font-size: 1.4rem;
+        font-size: 0.9rem;
     }
 
     li {
         list-style-type: none;
-        padding: 1.7rem;
+        // padding: 1.7rem;
+        padding: 1.1rem;
     }
 
     li:last-of-type {
@@ -96,16 +104,19 @@
     p {
         color: $grey-font-color;
         font-family: $link-font;
-        font-size: 18px;
+        // font-size: 18px;
+        font-size: 0.8rem;
     }
 
     li {
-        padding: 7px;
+        // padding: 7px;
+        padding: 5px;
     }
 }
 
 // Header in desktop view
-@media (min-width: 72em) {
+// @media (min-width: 72em) {
+@media (min-width: 48em) {
     .nav-btn {
         display: none;
     }
@@ -118,12 +129,14 @@
     .site-nav-list {
         background-color: transparent;
         transition: none;
-        left: 13rem;
+        // left: 13rem;
+        left: 10rem;
         top: 0.5rem;
     }
 
     .site-nav-top {
         display: flex;
+        gap: 1rem;
     }
 
     .site-nav-list img,
@@ -158,7 +171,8 @@
     li a {
         color: $white-font-color;
         padding: 3px 10px;
-        font-size: 1.2rem;
+        // font-size: 1.2rem;
+        font-size: 0.8rem;
         font-weight: 200;
         cursor: default;
     }
@@ -174,7 +188,8 @@
         cursor: pointer;
     }
 
-    @media (max-width: 1151px) {
+    // @media (max-width: 1151px) {
+    @media (max-width: 48rem) {
         span {
             display: none;
         }
