--- a/sass/_header-nav.scss
+++ b/sass/_header-nav.scss
@@ -170,7 +170,7 @@
 
     li a {
         color: $white-font-color;
-        padding: 3px 10px;
+        padding: 10px;
         // font-size: 1.2rem;
         font-size: 0.8rem;
         font-weight: 200;
@@ -179,11 +179,12 @@
 
     li a::after {
         content: "";
-        height: 2rem;
+        height: 3rem;
         background-color: white;
         position: relative;
         padding: 2px;
-        left: 10px;
+        margin-left: 0.5rem;
+        // left: 10px;
         border-radius: 2rem;
         cursor: pointer;
     }
