--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -20,7 +20,8 @@ $line-height: 1.5;
 
 // Article Layouts
 $article-width-mobile: 90%;
-$article-width-desktop: 80%;
+// $article-width-desktop: 80%;
+$article-width-desktop: 38rem;
 $text-margin: 4rem;
 
 // Media Query Breakpoints
