--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -8,12 +8,12 @@ h2 {
 
 h2 {
     // font-size: 3.3rem;
-    font-size: 3rem;
-    font-weight: 500;
+    font-size: 2.3rem;
+    font-weight: 400;
 }
 
 p {
-    font-size: 1.5rem;
+    // font-size: 1.5rem;
     font-weight: 300;
     line-height: $line-height;
 }
@@ -28,9 +28,27 @@ button:hover {
     cursor: pointer;
 }
 
-@media (min-width: 72em) {
+@media (min-width: 48em) {
     h2 {
-        font-size: 4.7rem;
-        margin: 0;
+        font-size: 3rem;
+        font-weight: 500;
     }
 }
+
+@media (min-width: 64em) {
+    h2 {
+        font-size: 3.8rem;
+        margin: 0;
+    }
+
+    p {
+        font-size: 1.2rem;
+    }
+}
+
+// @media (min-width: 72em) {
+//     h2 {
+//         font-size: 4.7rem;
+//         margin: 0;
+//     }
+// }
