added a hover effect to side nav bar and added button links to about section

--- a/sass/_header-nav.scss
+++ b/sass/_header-nav.scss
@@ -177,6 +177,11 @@
         cursor: default;
     }
 
+    li a:hover {
+        color: $white-font-color;
+        font-weight: bold;
+    }
+
     li a::after {
         content: "";
         height: 3rem;
