--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,6 +4,8 @@ $why-bg-color: rgb(21, 25, 43);
 $why-logo-color: rgb(40, 48, 78);
 $border-bottom-color: rgb(68, 71, 85);
 $hamburger-hover-color: rgb(208, 218, 242);
+$about-bg-color: rgb(26, 73, 181);
+$about-e-symbol: rgb(131, 185, 238);
 
 // Text Colors
 $home-font-color: rgb(26, 73, 181);
@@ -23,6 +25,7 @@ $article-width-mobile: 90%;
 // $article-width-desktop: 80%;
 $article-width-desktop: 38rem;
 $text-margin: 4rem;
+
 
 // Media Query Breakpoints
 $desktop: em(1151);
