--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,5 +1,6 @@
 // Colors
 $html-bg-color: rgb(255, 255, 255);
+$home-bg-color: rgb(225, 234, 249);
 $why-bg-color: rgb(21, 25, 43);
 $why-logo-color: rgb(40, 48, 78);
 $border-bottom-color: rgb(68, 71, 85);
@@ -8,7 +9,7 @@ $about-bg-color: rgb(26, 73, 181);
 $about-e-symbol: rgb(131, 185, 238);
 
 // Text Colors
-$home-font-color: rgb(26, 73, 181);
+$home-font-color: rgb(28, 83, 189);
 $design-font-color: rgb(20, 24, 39);
 $white-font-color: rgb(255, 255, 255);
 $grey-font-color: rgb(138, 140, 149);
