--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -18,10 +18,10 @@ body {
 
 main {
     max-height: 98vh;
-    margin-top: 1rem;
-    // overflow-x: hidden;
-    // overflow-y: scroll;
-    // scroll-snap-type: y mandatory;
+    margin-top: 0.5rem;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
 
     @media (min-width: 72em) {
         max-height: 95vh;
