--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,10 @@ body {
 
 main {
   max-height: 98vh;
-  margin-top: 1rem;
+  margin-top: 0.5rem;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
 }
 @media (min-width: 72em) {
   main {
@@ -117,9 +120,9 @@ button:hover {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 19rem;
+  width: 18.3rem;
   height: 97vh;
-  margin: 0 1rem 2rem;
+  margin: 0 0.5rem;
   left: -100%;
   background-color: rgb(21, 25, 43);
   z-index: 50;
@@ -145,7 +148,7 @@ button:hover {
 }
 
 .site-nav.toggled {
-  left: 29rem;
+  left: 20rem;
 }
 
 .site-nav-list.toggled {
@@ -155,6 +158,7 @@ button:hover {
 .site-nav-top li {
   border-bottom: rgb(68, 71, 85) solid 1px;
   padding-left: 0;
+  margin-right: 0.5rem;
 }
 
 .site-nav-bottom a,
@@ -292,7 +296,7 @@ button:hover {
   justify-content: center;
   position: relative;
   overflow: hidden;
-  margin: 1rem;
+  margin: 1rem 0.5rem;
   padding: 5rem 0;
   scroll-snap-align: start;
   border-radius: 1.5rem;
@@ -328,7 +332,7 @@ button:hover {
 }
 
 .section.pushed {
-  left: 19.5rem;
+  left: 19rem;
 }
 
 .home {
