--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -11,6 +11,7 @@ $design-bg-color: rgb(20, 138, 145);
 
 // Text Colors
 $home-font-color: rgb(28, 83, 189);
+$home-nav-color: rgb(26, 73, 181);
 $design-font-color: rgb(19, 25, 44);
 $white-font-color: rgb(255, 255, 255);
 $grey-font-color: rgb(138, 140, 149);
@@ -27,7 +28,6 @@ $article-width-mobile: 90%;
 // $article-width-desktop: 80%;
 $article-width-desktop: 38rem;
 $text-margin: 4rem;
-
 
 // Media Query Breakpoints
 $desktop: em(1151);
