--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -4,7 +4,6 @@
 .site-footer {
     position: fixed;
     width: 100%;
-    // bottom: 2rem;
     bottom: 1rem;
     z-index: 10;
     display: flex;
@@ -16,15 +15,12 @@
     }
 
     img {
-        // width: 1.5rem;
         width: 1.1rem;
-        filter: brightness(0) invert(1);
     }
 
     ul.social-media {
         display: flex;
         align-items: center;
-        // gap: 2rem;
         gap: 1.5rem;
         margin: 0;
     }
@@ -34,7 +30,6 @@
     }
 }
 
-// @media (min-width: 72em) {
 @media (min-width: 48em) {
     .site-footer .footer-desktop {
         display: block;
@@ -53,9 +48,8 @@
 
     .footer-desktop a,
     .footer-desktop p {
-        color: $white-font-color;
+        color: $home-nav-color;
         font-family: $link-font;
-        // font-size: 18px;
         font-size: 0.8rem;
     }
 }
