--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $html-bg-color: rgb(255, 255, 255);
 $home-bg-color: rgb(225, 234, 249);
+$home-go-down-button-hover: rgb(87, 128, 207);
 $why-bg-color: rgb(21, 25, 43);
 $why-logo-color: rgb(40, 48, 78);
 $border-bottom-color: rgb(68, 71, 85);
