--- a/styles/styles.css
+++ b/styles/styles.css
@@ -357,8 +357,8 @@ button:hover {
   }
 }
 .home .arrow-icon-container {
+  display: inline-block;
   margin-top: 2rem;
-  z-index: 3;
 }
 .home .go-down-btn {
   background-color: rgb(28, 83, 189);
@@ -372,14 +372,14 @@ button:hover {
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
-.home .go-down-btn:hover {
+.home .arrow-icon-container:hover .go-down-btn {
   background-color: rgb(87, 128, 207);
   transform: scale(1.1);
 }
 .home .go-down-btn img {
   position: relative;
-  top: 8%;
-  left: 1%;
+  top: 5%;
+  left: 2%;
 }
 
 .about {
