--- a/styles/styles.css
+++ b/styles/styles.css
@@ -340,11 +340,20 @@ button:hover {
 
 .more-docs {
   display: flex;
-  margin-right: 17em;
+  flex-direction: column;
+  margin-right: auto;
+  margin-left: auto;
   margin-top: 2em;
   gap: 1em;
 }
 
+@media (min-width: 48em) {
+  .more-docs {
+    display: flex;
+    flex-direction: row;
+    margin-right: 21em;
+  }
+}
 .more-docs button {
   display: flex;
   justify-content: center;
@@ -399,15 +408,20 @@ button:hover {
 }
 
 .more-details button {
-  justify-content: center;
-  align-items: center;
+  margin-left: 32em;
   border-radius: 2rem;
   z-index: 99;
-  width: 14em;
+  width: 12em;
   height: 3.8em;
   background-color: rgb(19, 25, 44);
+  color: rgb(255, 255, 255);
 }
 
+@media (min-width: 48em) {
+  .more-details button {
+    margin-left: -1em;
+  }
+}
 .more-details a {
   font-size: 1.2em;
   font-weight: bold;
